-Put it nicer -Fixed missing translations -Moved permission into library, not in example app -Added .apk example

--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -7,4 +7,11 @@
     <string name="select">Seleccionar</string>
     <string name="send">Enviar</string>
     <string name="share_with">Compartir con</string>
+    <string name="message_optional">Mensaje (opcional)</string>
+
+    <string-array name="options">
+        <item>Hacer foto</item>
+        <item>Coger de la galería</item>
+    </string-array>
+
 </resources>
